@@ -42,7 +42,7 @@
       <!-- Page description -->
       {% if page and page.meta.description %}
         <meta name="description"
-            content="{{ page.meta.description | first }}" />
+            content="{{ page.meta.description }}" />
       {% elif config.site_description %}
         <meta name="description" content="{{ config.site_description }}" />
       {% endif %}
@@ -89,7 +89,7 @@
     <!-- Site title -->
     {% block htmltitle %}
       {% if page and page.meta.title %}
-        <title>{{ page.meta.title | first }}</title>
+        <title>{{ page.meta.title }}</title>
       {% elif page and page.title and not page.is_homepage %}
         <title>{{ page.title }} - {{ config.site_name }}</title>
       {% else %}
